--- a/style.css
+++ b/style.css
@@ -1,11 +1,72 @@
 #movie-backdrop {
-    width: 100%;
+  width: 100%;
 }
 
 .container {
-    padding-top: 32px;
+  padding-top: 32px;
 }
 
 #actors {
-    margin: 24px 16px 0 0;
+  margin: 24px 16px 0 0;
+}
+nav a {
+  /* background-color:#a8cec4 !important; */
+  color: white !important;
+}
+body {
+  background-color: #062d409e;
+  color: white;
+}
+
+.aboutUsContainer {
+  color: #fff;
+  padding: 20px 0 70px 0;
+  width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.advantges {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.advantegesp {
+  color: white;
+  text-align: left;
+  margin: 0;
+}
+
+.number {
+  color: #d40242;
+  font-weight: 700;
+  font-size: 3em;
+  line-height: 0.9em;
+  opacity: 0.7;
+  width: 4vw;
+  margin: 0px 0px 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.card-text {
+  font-size: 0.9em;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.6);
+  display: block;
+  margin-top: 0;
+}
+
+.col {
+  flex-grow: 0 !important;
+}
+
+.card-img-top {
+    width: 240px;
+    height: 240px;
 }
