--- a/style.css
+++ b/style.css
@@ -1,18 +1,28 @@
-#movie-backdrop {
+/* #movie-backdrop {
   width: 100%;
+}
+
+img {
+  max-width: 100%;
 }
 
 .container {
   padding-top: 32px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: auto;
+  gap: 1rem;
 }
 
 #actors {
   margin: 24px 16px 0 0;
 }
+
 nav a {
   /* background-color:#a8cec4 !important; */
-  color: white !important;
+/* color: rgb(3, 2, 2) !important;
 }
+
 body {
   background-color: #062d409e;
   color: white;
@@ -67,6 +77,114 @@ body {
 }
 
 .card-img-top {
-    width: 240px;
-    height: 240px;
+  width: 240px;
+  height: 240px;
+}
+
+
+.container div {
+  border: 10px;
+}
+
+.container div img {
+  border-radius: 10px;
+} */
+.aboutUsContainer {
+  color: rgb(22, 18, 18);
+  padding: 20px 0 70px 0;
+  width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.advantges {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.advantegesp {
+  color: rgb(0, 0, 0);
+  text-align: left;
+  margin: 0;
+}
+
+.number {
+  color: #d40242;
+  font-weight: 700;
+  font-size: 3em;
+  line-height: 0.9em;
+  opacity: 0.7;
+  width: 4vw;
+  margin: 0px 0px 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.card-text {
+  font-size: 0.9em;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.6);
+  display: block;
+  margin-top: 0;
+}
+
+.col {
+   flex-grow: 0 !important;
+}
+.card-img-top {
+  width: 240px;
+  height: 240px;
+}
+.container div {
+  border: 10px;
+}
+
+.container div img {
+  border-radius: 10px;
+}
+
+#movie-backdrop {
+  width: 100%;
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  padding-top: 32px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: auto;
+  gap: 1rem;
+}
+
+#actors {
+  margin: 24px 16px 0 0;
+}
+
+div.dropdown-multicol2 {
+  width: 30em;
+}
+
+div.dropdown-multicol2 > div.dropdown-col {
+  display: inline-block;
+  width: 32%;
+}
+
+.container div {
+  border: 10px;
+}
+
+.container div img {
+  border-radius: 10px;
+}
+
+h5 {
+    margin: 0;
 }
