changing the search function to use tmdb s api

--- a/style.css
+++ b/style.css
@@ -225,3 +225,9 @@ h5 {
     rgba(10, 21, 37, 1) 100%
   );
 }
+.notFoundMsgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
