--- a/style.css
+++ b/style.css
@@ -5,40 +5,49 @@
 body{
     font-family: 'Open Sans', sans-serif;
     background-color: #f3f3f3;
+    background: rgb(10, 21, 37);
+    color: #fff;
+    background: linear-gradient(
+    0deg,
+    rgba(10, 21, 37, 1) 60%,
+    rgba(68, 17, 47, 1) 95%
+  );
 }
+
 
 img{
     max-width: 100%;
 }
-nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:100px ;
-    border-bottom: 3px solid #000;
-    background-color: rgb(196, 180, 158,0.5 );
+ nav{
+  
+    padding: 2rem !important;
+    background-color: transparent;
     font-weight: bold;
-}
-.nav-item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: #fff ;
     text-align: center;
-}
-.btn{
-    font-weight: ;
+} 
+
+ nav a{
+  color: #fff;
 }
 
-.dropdown{
+.nav-item{
+    padding: 1rem;
+    font-size: 1.3rem;
+  text-align: center;
+} 
+
+
+/* .dropdown{
     font-weight: bold;
     background-color: inherit;
     margin-left: 1rem;
     font-family: inherit;
-}
+} */
 
 
 .container {
-    margin: 0rem;
+    margin: 1rem 0rem;
     padding:1rem;
     display: grid;
     grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
@@ -53,14 +62,14 @@ nav{
     margin: 24px 16px 0 0;
 }
 
-div.dropdown-multicol2{
+/* div.dropdown-multicol2{
     width: 30em;
-}
+} */
 
-div.dropdown-multicol2>div.dropdown-col{
+/* div.dropdown-multicol2>div.dropdown-col{
 display:inline-block;
 width: 32%;
-}
+} */
 
 .container div {
     border: 10px;
@@ -70,12 +79,7 @@ width: 32%;
     border-radius: 10px;
 }
 
-.sidebar{
-    max-width: 10rem;
-    white-space: nowrap;
-    word-wrap: normal;
-    line-height: 2rem;
-}
+
 
 
 #movie-backdrop {
@@ -141,22 +145,8 @@ width: 32%;
 .txtInfo{
     color: rgb(241, 212, 212);
 }
-.wrapper {
-    max-width: 100%;
- }
-/* .fa{
-    margin-left:1rem ;
-}  */
 
 
-  
-  /* img{
-    width:200px !important;
-    height:200px;
-    border-radius: 50% 50%;
-  } */
-
-  /*Spiner*/
   
   figure#spinner { 
     transform-style: preserve-3d; 
@@ -481,4 +471,96 @@ margin-bottom: 1rem;
 .movieCredits div{
     position: relative;
     
+}
+
+.title{
+  font-family: 'Yeseva One', cursive;
+    font-size: 2rem;
+}
+.dropdown-toggle{
+  font-weight: bold;
+  color: #fff;
+}
+
+ /* here is the new codes */
+
+.aboutUsContainer {
+  color: #fff;
+  padding: 20px 0 70px 0;
+  width: 800px;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+}
+
+.advantges {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.advantegesp {
+  color: white;
+  text-align: left;
+  margin: 0;
+}
+
+.numbersAboutus {
+  color: #d40242;
+  font-weight: 700;
+  font-size: 3em;
+  line-height: 0.9em;
+  opacity: 0.7;
+  width: 4vw;
+  margin: 0px 0px 20px;
+}
+
+.hithereh2 {
+  height: 233px;
+  line-height: 233px;
+  font-family: "Shrikhand", cursive;
+  font-size: 6em;
+  font-weight: 400;
+  position: relative;
+  top: 0;
+  left: 0;
+  color: #fff;
+}
+
+.footerContainer {
+  width: 100%;
+  color: #898b96;
+  display: flex;
+  justify-content: center;
+  background: rgb(10, 21, 37);
+  background: rgb(68, 17, 47);
+  background: linear-gradient(
+    0deg,
+    rgba(68, 17, 47, 1) 30%,
+    rgba(10, 21, 37, 1) 100%
+  );
+}
+
+.notFoundMsgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+#searchBox {
+  background: transparent;
+}
+
+#searchBox:focus {
+  background: transparent;
+  color:#fff
+}
+
+#searchBtn {
+  background: transparent;
+  border-color: #9e7b9b;
+  color: white !important;
+}
+.abus{
+  width: 20px;
 }
